Use discovery to find default storage location for tests (#196)
* Move ACL mode to TestSubject
* Simplify TestHarnessInitializationException
* Refactor AuthManager and simplify tests
* Remove setup of root acl
* Move ACL mode to TestSubject instead of Config
* Improve exceptions in auth process
* Discover storage from WebID profile